--- a/views/painting.handlebars
+++ b/views/painting.handlebars
@@ -1,8 +1,13 @@
 <section class="painting">
-  <img src="/images/{{painting.filename}}" alt="{{painting.description}}">
   <div class="painting-details">
-    <h3>{{painting.title}}</h3>
-    <p>By: {{painting.artist}}</p>
-    <p>Exhibition open until: {{ format_date painting.exhibition_date}}</p>
+    {{!-- Name of Project --}}
+    <h3>{{project.title}}</h3>
+    {{!-- Amount of Money Needed --}}
+    <p>{{project.needed_funding}} needed!</p>
+
+    <p>Created by {{user.name}} on {{ format_date project.date_created}}</p>
+  </div>
+  <div>
+    {{project.description}}
   </div>
 </section>
